# donger

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
atslite/boards/lite1/: Cargo.toml  Justfile  build.rs
atslite/boards/lite1/.cargo/: config.toml
atslite/boards/lite1/boot-api/: Cargo.toml
atslite/boards/lite1/boot-api/src/: lib.rs
atslite/boards/lite1/bootloader/: Cargo.toml  README.md  build.rs
atslite/boards/lite1/bootloader/.cargo/: config.toml
atslite/boards/lite1/bootloader/src/: main.rs
atslite/boards/lite1/net-core/: Cargo.toml  build.rs
atslite/boards/lite1/net-core/.cargo/: config.toml
atslite/boards/lite1/net-core/src/: main.rs
atslite/boards/lite1/netcore-bootloader/: Cargo.toml  build.rs  memory.x
atslite/boards/lite1/netcore-bootloader/.cargo/: config.toml
atslite/boards/lite1/netcore-bootloader/src/: main.rs
atslite/boards/lite1/src/: battery_model.rs  imu.rs  init.rs  lib.rs  main.rs  pins.rs  sensors.rs  usb.rs
atslite/boards/lite1/stage1-bootloader/: Cargo.toml  README.md  build.rs
atslite/boards/lite1/stage1-bootloader/src/: main.rs
atslite/common/: Cargo.toml
atslite/common/src/: device_control.rs  device_control_task.rs  lib.rs  nrf5340_init.rs  object_mode.rs  pmic_leds.rs  power.rs  power_button.rs  power_state.rs  settings.rs  transport_mode.rs  utils.rs
atslite/common/src/ble/: l2cap_bridge.rs  peripheral.rs
atslite/common/src/ble/host/: mod.rs  transport.rs
better-dfu/: Cargo.toml
better-dfu/src/: dfu.rs
ccalib/: Cargo.toml
ccalib/nf_2x5/: info
ccalib/poc_3x5/: info
ccalib/src/: lib.rs  main.rs  utils.rs
common/: Cargo.toml
common/src/: lib.rs  packet.rs  stream.rs  usb.rs  usb_device.rs
dongle-fw/: .gitignore  BUILD_SUCCESS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Justfile  PROTOCOL_EXTENSION.md  README.md  build.rs  memory-dk.kdl  memory-dongle.kdl  memory.kdl
dongle-fw/.cargo/: config-dk.toml  config.toml
dongle-fw/.claude/: BUILD.md  DEVICE_LIST_SUBSCRIPTION.md  PROTOCOL_EXTENSION.md
dongle-fw/scripts/: Justfile
dongle-fw/src/: control.rs  defmt_serial.rs  main.rs  pairing.rs  storage.rs  usb.rs
dongle-fw/src/ble/: central.rs  connection_handler.rs  device_task.rs  l2cap_packet.rs  mod.rs  pairing_scanner.rs  security.rs
dongle-fw/src/defmt_serial/: sus.rs  timer.rs
firmware/: Cargo.toml  build.rs  build_mcuboot.sh  link-ram-mcuboot.x  memory-mcuboot.x  memory.x
firmware/.cargo/: config.toml
firmware/scripts/: build_mcuboot_ats_mot.ps1  build_mcuboot_atslite-2.2.0.ps1  build_mcuboot_atslite-2.2.0.sh  build_mcuboot_atslite-4.1.0.ps1
firmware/scripts/sub/: build_mcuboot_atslite.sh
firmware/src/: main.rs  paj7025.rs  pinout.rs
legacy/paj7025/: Cargo.toml
legacy/paj7025/src/: lib.rs  types.rs  u2048.rs
legacy/vm-fw/: .gitignore  Cargo.toml  base-cargo.toml  laze-project.yml  rustfmt.toml
legacy/vm-fw/.cargo/: config.toml
legacy/vm-fw/app-core/app/: .gitignore  Cargo.toml  build.rs  memory.x
legacy/vm-fw/app-core/app/.cargo/: config.toml
legacy/vm-fw/app-core/app/memory/: vm.x
legacy/vm-fw/app-core/app/src/: battery_model.rs  macros.rs  main.rs  nrf5340_init.rs  object_mode.rs  pins.rs  pmic_leds.rs  power.rs  power_button.rs  power_state.rs  settings.rs  usb.rs  utils.rs
legacy/vm-fw/app-core/app/src/ble/: l2cap_bridge.rs  l2cap_packet.rs  mod.rs  peripheral.rs
legacy/vm-fw/app-core/app/src/imu/: bmi.rs  icm.rs  mod.rs
legacy/vm-fw/app-core/bootloaders/atslite/: Cargo.toml  build.rs  memory.x
legacy/vm-fw/app-core/bootloaders/vm/: Cargo.toml  README.md
legacy/vm-fw/boards/atslite/: Cargo.toml  Justfile  build.rs
legacy/vm-fw/boards/atslite/.cargo/: config.toml
legacy/vm-fw/boards/atslite/boot-api/: Cargo.toml
legacy/vm-fw/boards/atslite/bootloader/: Cargo.toml  README.md  build.rs
legacy/vm-fw/boards/atslite/net-core/: Cargo.toml  build.rs
legacy/vm-fw/boards/atslite/netcore-bootloader/: Cargo.toml  README.md  boot.s  build.rs
legacy/vm-fw/boards/atslite/pcd/: Cargo.toml
legacy/vm-fw/boards/atslite/src/: battery_model.inc.rs  battery_model.rs  device_control_task.rs  imu.rs  l2cap.rs  lib.rs  main.rs  nrf5340_init.rs  pins.rs  platform.rs  pmic_leds.rs  power_button.rs  power_state.rs  transport_mode.rs  utils.rs
legacy/vm-fw/boards/atslite/stage1-bootloader/: Cargo.toml  build.rs
legacy/vm-fw/boards/vm/: Cargo.toml  Justfile  build.rs
legacy/vm-fw/boards/vm/.cargo/: config.toml
legacy/vm-fw/boards/vm/bootloader/: Cargo.toml  build.rs
legacy/vm-fw/boards/vm/src/: imu.rs  l2cap.rs  lib.rs  main.rs  pins.rs  platform.rs  utils.rs
legacy/vm-fw/bootloader/: memory.x
legacy/vm-fw/bootloader/.cargo/: config.toml
legacy/vm-fw/bootloader/src/: main.rs
legacy/vm-fw/common/: Cargo.toml
legacy/vm-fw/common/.cargo/: config.toml
legacy/vm-fw/common/src/: fodtrigger.rs  lib.rs  object_mode.rs  pins.rs  platform.rs  settings.rs  usb.rs  utils.rs
legacy/vm-fw/memory/: memory-atslite.kdl  memory-vm.kdl
legacy/vm-fw/net-core/: Cargo.toml  build.rs  memory.x
legacy/vm-fw/net-core/.cargo/: config.toml
legacy/vm-fw/net-core/src/: cmd_dispatch.rs  main.rs
legacy/vm-fw/scripts/atslite/: Justfile  Makefile
legacy/vm-fw/scripts/vm/: Justfile  Makefile
legacy/vm-fw/src/: fodtrigger.rs  imu.rs  main.rs  object_mode.rs  peripherals.rs  pins.rs  settings.rs  usb.rs  utils.rs
paj7025/: Cargo.toml
paj7025-nrf/: Cargo.toml
paj7025-nrf/src/: lib.rs  lib_new.rs
paj7025/src/: lib.rs
poc-fw/: .rust-analyzer.json  Cargo.toml  build.rs  memory.x
poc-fw/.cargo/: config.toml
poc-fw/bootloader/: Cargo.toml  bootloader.hex  memory.x
poc-fw/bootloader/.cargo/: config.toml
poc-fw/bootloader/src/: main.rs
poc-fw/net/: Cargo.toml
poc-fw/net/.cargo/: config.toml
poc-fw/net/src/: main.rs
poc-fw/src/: image_mode.rs  imu.rs  init.rs  main.rs  object_mode.rs  settings.rs  usb.rs  utils.rs
src/: main.rs  (+2 more)
viewer/: .gitignore  Cargo.toml  eval.py
viewer/src/: aprilgrid.rs  charuco.rs  chessboard.rs  circles.rs  cv.rs  draw_pattern_points.rs  lib.rs  main.rs  mot_data.rs  utils.rs
viewer/src/circles/: special.rs
(+53 files in other folders)
