[package]
edition = "2024"
name = "better-dfu"
version = "0.2.0"
description = "An implementation of the USB DFU 1.1 protocol, using embassy-boot (extended fork)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/odysseyarm/ats_common"
categories = [
    "embedded",
    "no-std",
    "asynchronous"
]

[dependencies]
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.17", optional = true }

bitflags = "2.4.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"], optional = true }
embassy-boot = "0.6.1"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = { version = "0.5.1", default-features = false }
embedded-storage = "0.3.1"
esp32c3-hal = { version = "0.13.0", optional = true, default-features = false }

[features]
dfu = []
application = []
defmt = ["dep:defmt", "embassy-boot/defmt", "embassy-usb/defmt"]
log = ["dep:log"]
cortex-m = ["dep:cortex-m"]
esp32c3-hal = ["dep:esp32c3-hal"]
ed25519-dalek = ["embassy-boot/ed25519-dalek", "_verify"]
ed25519-salty = ["embassy-boot/ed25519-salty", "_verify"]

# Internal features
_verify = []
