[package]
name = "ccalib"
version = "0.1.0"
edition = "2024"

[dependencies]
argmin = { git = "https://github.com/argmin-rs/argmin", version = "0.10.0" }
argmin-math = { git = "https://github.com/argmin-rs/argmin", version = "0.4.0", features = ["nalgebra_v0_33"] }
nalgebra = "0.33.2"
num-dual = "0.11.0"
opencv = "0.94.2"
