[package]
edition = "2021"
name = "donger-firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
default = ["vm2"]
mcuboot = ["cortex-m-rt/set-sp", "cortex-m-rt/set-vtor"]
vm2 = ["embassy-nrf/nrf52840"]
atslite-1-1 = ["embassy-nrf/nrf5340-app-s"]
atslite-2-2 = ["embassy-nrf/nrf5340-app-s"]
atslite-4-1 = ["embassy-nrf/nrf5340-app-s"]


[dependencies]
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers"] } # path = "/home/matthew/code/otherppl/embassy/embassy-main/embassy-executor" }
embassy-futures = { version = "0.1.1", features = ["defmt"] } # path = "/home/matthew/code/otherppl/embassy/embassy-main/embassy-futures" }
embassy-nrf = { version = "0.2.0", features = ["defmt", "time-driver-rtc1", "unstable-pac", "time", "gpiote"] } # path = "/home/matthew/code/otherppl/embassy/embassy-main/embassy-nrf" }
embassy-sync = { version = "0.6.0", features = ["defmt"] } # path = "/home/matthew/code/otherppl/embassy/embassy-main/embassy-sync" }
embassy-usb = { version = "0.3.0" } # path = "/home/matthew/code/otherppl/embassy/embassy-main/embassy-usb" } # , features = ["defmt"] }
embassy-time = { version = "0.3.0" } # path = "/home/matthew/code/otherppl/embassy/embassy-main/embassy-time" }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
static_cell = "2.0.0"
paj7025-nrf = { version = "0.1.0", path = "../paj7025-nrf" }

[profile.release]
debug = 2
