[package]
edition = "2021"
name = "donger-firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
default = ["vm2"]
mcuboot = ["cortex-m-rt/set-sp", "cortex-m-rt/set-vtor"]
vm2 = ["_nrf52840"]
vm3 = ["vm2"]  # identical to vm2
atslite-1-1 = ["_nrf5340"]
atslite-2-2 = ["_nrf5340"]
atslite-4-1 = ["_nrf5340"]

# internal features
_nrf52840 = ["embassy-nrf/nrf52840"]
_nrf5340 = ["embassy-nrf/nrf5340-app-s"]


[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-nrf = { version = "0.3.1", features = ["defmt", "time-driver-rtc1", "unstable-pac", "time", "gpiote"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-usb = { version = "0.4.0" }
embassy-time = { version = "0.4.0" }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
static_cell = "2.0.0"
paj7025-nrf = { version = "0.1.0", path = "../paj7025-nrf" }

[profile.release]
debug = 2
lto = "fat"
opt-level = "s"

# https://github.com/dustinblackman/cargo-run-bin
[package.metadata.bin]
probe-rs-tools = { version = "0.24.0", locked = true, bins = ["probe-rs"] }
