[package]
name = "paj7025-nrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.6"
embassy-nrf = { version = "0.1.0", features = ["nrf52840", "unstable-pac"]}
embassy-embedded-hal = { version = "0.1.0" }
embedded-hal-async = "1.0.0"
embedded-hal = "1.0.0"
embassy-time = "0.3.0"
