[package]
name = "paj7025-nrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.6"
embassy-nrf = { version = "0.3.0" }
embassy-embedded-hal = { version = "0.3.0" }
embassy-time = "0.4.0"
device-driver = { version = "1.0.7", default-features = false, features = ["dsl"] }
protodongers = { git = "https://github.com/odysseyarm/protodonge-rs" }

[features]
defmt = []
