[package]
name = "paj7025-nrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.6"
embassy-nrf = { version = "0.3.0", optional = true }
embassy-time = "0.4.0"
device-driver = { version = "1.0.7", default-features = false, features = ["dsl"] }
protodongers = { git = "https://github.com/odysseyarm/protodonge-rs" }
embedded-hal-async = "1.0.0"
thiserror = "2.0.16"

[features]
defmt = []
nrf = ["embassy-nrf"]
