[package]
name = "poc-fw"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "task-arena-size-5120"] }
embassy-futures = "0.1.1"
embassy-nrf = { version = "0.3.1", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-usb = { version = "0.4.0", features = ["defmt"] }

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
defmt = "0.3.10"
nrf-pac = { version = "0.1.0", features = ["defmt"] }
embedded-hal = "1.0.0"
pag7661qn = { version = "0.1.0", path = "../pag7661qn" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
static_cell = "2.1.0"
icm426xx = { version = "0.3.2", git = "https://github.com/0e4ef622/icm426xx", features = ["async"] }
bytemuck = "1.21.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }

[dependencies.protodongers]
version = "0.1.0"
git = "https://github.com/odysseyarm/protodonge-rs"
default-features = false
features = ["defmt"]

# https://github.com/dustinblackman/cargo-run-bin
[package.metadata.bin]
probe-rs-tools = { version = "0.27.0", locked = true, bins = ["probe-rs"] }

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"
