[package]
name = "poc-fw"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread"] }
embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-futures = { version = "0.1.1", git = "https://github.com/embassy-rs/embassy.git" }
embassy-nrf = { version = "0.3.1", git = "https://github.com/embassy-rs/embassy.git", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
embassy-boot = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-usb-dfu = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["application", "cortex-m", "defmt"] }

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
defmt = "1"
nrf-pac = { version = "0.1.0", features = ["defmt"] }
embedded-hal = "1.0.0"
pag7661qn = { version = "0.1.0", path = "../pag7661qn" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
static_cell = "2.1.0"
icm426xx = { version = "0.3.2", git = "https://github.com/0e4ef622/icm426xx", features = ["async"] }
bytemuck = "1.21.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
nalgebra = { version = "0.33", default-features = false }
embedded-storage = "0.3.1"

[dependencies.protodongers]
version = "0.1.0"
git = "https://github.com/odysseyarm/protodonge-rs"
default-features = false
features = ["defmt"]

# https://github.com/dustinblackman/cargo-run-bin
[package.metadata.bin]
probe-rs-tools = { version = "0.27.0", locked = true, bins = ["probe-rs"] }

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"
codegen-units = 1
