[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
default-run = "viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = { version = "0.6.0", default-features = false, features = ["std"] }
bytemuck = { version = "1.16.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
image = { version = "0.24.8", default-features = false, features = ["png"] }
macroquad = "0.4.11"
opencv = "0.93.0"
serialport = { version = "4.3.0", features = ["usbportinfo-interface"] }
