[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
default-run = "viewer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aprilgrid = { version = "0.5.3", git = "https://github.com/Abrahamh08/aprilgrid-rs.git" }
atomic = { version = "0.6.0", default-features = false, features = ["std"] }
bytemuck = { version = "1.16.0", features = ["derive"] }
ccalib = { version = "0.1.0", path = "../ccalib" }
clap = { version = "4.5.4", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }
macroquad = "0.4.11"
opencv = "0.94.2"
serde_json = "1.0.133"
serialport = { version = "4.3.0", features = ["usbportinfo-interface"] }

# Enable optimizations for dependencies in dev profile
[profile.dev.package."*"]
opt-level = 3
