[package]
name = "paj7025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "1.0.1"
embassy-nrf = { version = "0.8.0", optional = true }
embassy-time = "0.5.0"
device-driver = { version = "1.0.7", default-features = false, features = ["dsl"] }
embedded-hal-async = "1.0.0"
thiserror = { version = "2.0.17", default-features = false }
crypto-bigint = { version = "0.6.1", default-features = false }
arbitrary-int = { version = "2.0.0", features = [] }
bitbybit = "1.3.3"
bytemuck = { version = "1.24.0", features = ["derive"] }

[features]
defmt = ["arbitrary-int/defmt"]
nrf = ["embassy-nrf"]
