[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"
description = "Bootloader for nRF chips"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-nrf = { version = "0.3.1", git = "https://github.com/Abrahamh08/embassy.git", features = ["nrf5340-app-s"] }
embassy-boot = { version = "0.4.0", git = "https://github.com/Abrahamh08/embassy.git" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
embassy-sync = { version = "0.6.2", git = "https://github.com/Abrahamh08/embassy.git" }
cortex-m-rt = { version = "0.7" }
cfg-if = "1.0.0"
embassy-usb-dfu = { version = "0.1.0", git = "https://github.com/Abrahamh08/embassy.git", features = ["dfu", "cortex-m"] }
embassy-usb = { version = "0.4.0", git = "https://github.com/Abrahamh08/embassy.git", default-features = false }
embassy-futures = { version = "0.1.1", git = "https://github.com/Abrahamh08/embassy.git" }

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot/defmt",
    "embassy-nrf/defmt",
]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
