[package]
name = "poc-fw-net"
version = "0.1.0"
edition = "2021"

[dependencies]
# embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread"] }
# embassy-futures = "0.1.1"
# embassy-nrf = { version = "0.3.1", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
# embassy-sync = "0.6.2"
# embassy-time = "0.4.0"
# embassy-usb = "0.4.0"
nrf-pac = { version = "0.1.0", features = ["nrf5340-net", "rt"] }

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
# defmt-rtt = "0.4.1"
panic-probe = "0.3.1"
